<resources>
    <string name="app_name">Taxi Zagreb</string>

    <string name="title_section1">Imenik</string>
    <string name="title_section2">Cijena i navigacija</string>
    <string name="title_section3">Povijest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Pomoć</string>
    <string name="title_activity_imenik">ImenikActivity</string>

    <string name="hello_world">Hello world!</string>


    <string name="imenik_Cammeo_ime">Cammeo Taxi</string>
    <string name="imenik_Cammeo_cijena_poziv">2,40 kn poziv</string>

    <string name="imenik_Eko_ime">Eko Taxi</string>
    <string name="imenik_Eko_cijena_poziv">2,49 kn poziv</string>

    <string name="imenik_Radio_ime">Radio Taxi</string>
    <string name="imenik_Radio_cijena_poziv">2,50 kn poziv</string>

    <string name="imenik_Zebra_ime">Zebra Taxi</string>
    <string name="imenik_Zebra_cijena_poziv">2,45 kn poziv</string>

    <string name="imenik_fix_mob"> </string>

    <string name="imenik_btn_info">i</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="desc_cammeo_logo">cammeo logo</string>
    <string name="desc_radio_logo">radio logo</string>
    <string name="desc_eko_logo">eko logo</string>
    <string name="desc_zebra_logo">zebra logo</string>

    <string name="desc_cammeo_call">cammeo call</string>
    <string name="desc_radio_call">radio call</string>
    <string name="desc_eko_call">eko call</string>
    <string name="desc_zebra_call">zebra call</string>

    <string name="desc_cammeo_info">cammeo info</string>
    <string name="desc_radio_info">radio info</string>
    <string name="desc_eko_info">eko info</string>
    <string name="desc_zebra_info">zebra info</string>

    <string name="dialogGumbZatvori">Zatvori</string>


    <string name="naslov_cammeo">Cammeo Taxi</string>
    <string name="naslov_radio">Radio Taxi</string>
    <string name="naslov_eko">Eko Taxi</string>
    <string name="naslov_zebra">Zebra Taxi</string>

    <string name="adresa_polazista">Adresa polazišta</string>
    <string name="adresa_odredista">Adresa odredišta</string>
    <string name="btn_GPS">GPS</string>
    <string name="btn_izracunaj">Izračunaj</string>
    <string name="btn_reset">Očisti</string>
    <string name="btn_povijest">Povijest</string>

    <string name="txt_na"></string>
    <string name="txt_cijena">Cijena</string>
    <string name="txt_cijena_kn">kn</string>

    <string name="txt_udaljenost">Udaljenost</string>
    <string name="txt_udaljenost_km">km</string>

    <string name="btn_karta">Karta</string>
    <string name="title_activity_google_maps">Map</string>

    <string name="valuta">kn</string>
    <string name="dostupnost_veze">Veza na Internet nije dostupna</string>
    <string name="neuspio_unos">Neuspio unos u bazu</string>

    <string name="prazno_polje">Unesite adrese</string>
    <string name="dohvat_podataka">Dohvaćanje podataka\n\nVrijeme dohvaćanja ovisi o brzini Internet veze</string>

    <string name="nepostojece_adrese">Adresa nije pronadena</string>


    <string name="cammeo_start">15</string>
    <string name="cammeo_freekm">2</string>
    <string name="cammeo_ostalikm">6</string>

    <string name="radio_start">10</string>
    <string name="radio_freekm">0</string>
    <string name="radio_ostalikm">6</string>

    <string name="eko_start">8.8</string>
    <string name="eko_freekm">0</string>
    <string name="eko_ostalikm">6</string>

    <string name="zebra_start">8.5</string>
    <string name="zebra_freekm">0</string>
    <string name="zebra_ostalikm">5.9</string>

    <string name="info_nap_cammeo">Cijena poziva: 2,40 kn\nStart: 15 kn\nCijena po km: 6 kn\nPrva dva km besplatna</string>
    <string name="info_title_cammeo">Taxi Cammeo</string>
    <string name="info_nap_radio">Cijena poziva: 2,50 kn\nStart: 10 kn\nCijena po km: 6 kn</string>
    <string name="info_title_radio">Radio Taxi Zagreb</string>
    <string name="info_nap_eko">Cijena poziva: 2,49 kn\nStart: 8,80 kn\nCijena po km: 6 kn</string>
    <string name="info_title_eko">Eko Taxi</string>
    <string name="info_nap_zebra">Cijena poziva: 2,45 kn\nStart: 8,50 kn\nCijena po km: 5,90 kn</string>
    <string name="info_title_zebra">Taxi Zebra</string>


    <string name="broj_cammeo">011212</string>
    <string name="broj_radio">1777</string>
    <string name="broj_eko">1414</string>
    <string name="broj_zebra">0607557</string>


    <string name="polaziste_string">Moja lokacija</string>

    <string name="help_dialog_poruka">
         <![CDATA[
        <b>Taxi</b> Zagreb je aplikacija koja korisnicima omogućuje procjenu cijene vožnji za prijevoznike na području grada Zagreba te pozivanje istih.<br><br>
        <b>Imenik:</b> pozivanje taxi prijevoznika klikom na <u>gumb za zvanje</u> i prikazivanje tarifa klikom na <u>gumb za informacije</u>.<br><br>
        <b>Cijena i navigacija:</b> u polja za adrese potrebno je unesti ime ulice s područja grada Zagreba te kliknuti na gumb <u>IZRAČUNAJ</u>.<br>
        Prikazat će se koliko traje putovanje, koliko je dug nakraći put i cijene pojedinog taxi prijevoznika.<br>
        Omogućit će se gumb <u>KARTA</u> i gumbi za pozivanje.<br>
        <u>KARTA</u> prikazuje najkraću rutu te lokaciju korisnika.<br>
        <u>Gumb za pozivanje</u> započet će poziv prema taxi prijevozniku, a informacije o ruti spremit će se u Povijest.<br>
        <u>Gumb GPS</u> omogućuje lociranje korisnika na temelju lokacije u mreži.<br>
        <u>Gumb Očisti</u> briše podatke iz svih polja.<br><br>
        <b>Povijest:</b> klikom na pojedinu stavku aplikacija će prikazati ekran Cijena i navigacija te će popuniti polja za unos podacima iz stavke.<br><br>
        <b>Karta:</b> pogled na kartu se tapkanjem i štipanjem ekrana može približiti ili udaljiti. Klikom na tipku za lociranje (gore desno) ekran se centrira na lokaciju korisnika.<br><br>
        <b>Izradio: Denis Glad</b>
        ]]>

    </string>

    <string name="povijest_nema_podataka">Nema podataka</string>
</resources>
