<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imenik_visina_polja"
            android:background="#e2dbdbd7"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imenik_cammeo_logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/imenik_logo_margin_top"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/taxicammeo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_Cammeo_cijena_poziv"
                android:id="@+id/imenik_cammeo_kn"
                android:layout_below="@+id/imenik_cammeo_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_fix_mob"
                android:id="@+id/imenik_cammeo_fix_mob"
                android:layout_below="@+id/imenik_cammeo_kn"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imenik_visina_polja"
            android:background="#fffffadd"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imenik_radio_logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/imenik_logo_margin_top"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/radiotaxi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_Radio_cijena_poziv"
                android:id="@+id/imenik_radio_kn"
                android:layout_below="@+id/imenik_radio_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_fix_mob"
                android:id="@+id/imenik_radio_fix_mob"
                android:layout_below="@+id/imenik_radio_kn"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

<!-- **************  DRUGI REDAK   ************** -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imenik_visina_polja"
            android:background="#e2dbdbd7"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imenik_eko_logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/imenik_logo_margin_top"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ekotaxi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_Eko_cijena_poziv"
                android:id="@+id/imenik_eko_kn"
                android:layout_below="@+id/imenik_eko_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_fix_mob"
                android:id="@+id/imenik_eko_fix_mob"
                android:layout_below="@+id/imenik_eko_kn"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="5dp" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imenik_visina_polja"
            android:background="#fffffadd"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imenik_zebra_logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/imenik_logo_margin_top"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/zebrataxi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_Zebra_cijena_poziv"
                android:id="@+id/imenik_zebra_kn"
                android:layout_below="@+id/imenik_zebra_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imenik_fix_mob"
                android:id="@+id/imenik_zebra_fix_mob"
                android:layout_below="@+id/imenik_zebra_kn"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
